add zero padding and change bkgrnd color

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <div class="container">
     <h1 id="clock">
-      <span id="hours"></span>
-      <span id="minutes"></span>
-      <span id="seconds"></span>
+      <span id="hours">00</span>
+      <span id="minutes">00</span>
+      <span id="seconds">00</span>
     </h1>
 
 </div>
